完成，待添加对各组件实现细节的readme

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
-    "styled-components": "^6.1.15"
+    "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.15",
+    "underscore": "^1.13.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
